Fix more button color in dark mode

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -136,7 +136,7 @@ body.theme-dark {
   --color-bg-body: black;
   --color-bg: #202020;
   --color-primary: #4d9bf3;
-  --color-bright: #2857FF;
+  --color-bright: #5779f5;
   --color-secondary: #09A1A3;
   --color-text: #d1d1d1;
   --color-text-light: #b3bfd3;
